# particle-rs

./: .gdbinit  .gitignore
argon/: Cargo.toml
argon/examples/: README.md  atat-test.rs  blinky.rs  spi.rs  uart.rs  wifi.rs  wifi2.rs  wifi_example2.rs
argon/src/: lib.rs  serial.rs  wifi.rs
argon/src/commands/: mod.rs  responses.rs  types.rs
argon/src/gsmmuxer/: README.md  details.rs  muxer.rs  proto.rs
gen3-common/: Cargo.toml
gen3-common/src/: gpio.rs
xenon/: Cargo.toml
xenon/examples/: blinky.rs
xenon/src/: lib.rs
