[package]
authors = ["David Flemström <david.flemstrom@gmail.com>", "Tad Fisher <tadfisher@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Board support crate for the Particle Argon device"
keywords = ["arm", "cortex-m", "nrf52840", "hal"]
license = "MIT OR Apache-2.0"
name = "particle-argon"
repository = "https://github.com/tadfisher/particle-rs"
documentation = "https://docs.rs/particle-argon/0.0.1/particle_argon/"
version = "0.0.1"
edition = "2018"

[dependencies]
cortex-m = { version = "0.6.1", features = ["inline-asm", "const-fn"] }
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.4"
nrf52840-hal = "0.12.1"
particle-gen3-common = { path = "../gen3-common/" }
embedded-hal-spy = "0.0.3"
at-commands = { version = "0.4.0", features = ["parser"] }
embedded-error = "0.6.0"
atat = { path = "../../atat/atat" , features = ["serde_at", "derive"] }
heapless = "0.7"
no-std-net = { version = "0.5", features = ["serde"] }
base64 = { version= "0.13", default-features = false }


[dev-dependencies]
cortex-m-rt = "0.6.11"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
nb = "0.1.2"

[features]
rt = ["nrf52840-hal/rt"]
default = ["rt"]
